syntax = "proto3";

option csharp_namespace = "ZodiacPrinter";

package printer;


service Summer {
  rpc SummerSign (SummerRequest) returns (SummerReply);
}

message SummerRequest {
  string date = 1;
}

message SummerReply {
  string zodiacSign = 1;
}
